actualiza nombre y correo

--- a/index.htm
+++ b/index.htm
@@ -21,10 +21,10 @@
 <body>
 
     <header class="vcard">
-    	<h1 class="fn">Eduardo Jara Mardones</h1>
+    	<h1 class="fn">Felipe Jara</h1>
         <h2 class="role">Front-End Developer &amp; Web Designer</h2>
     	<ul class="contact">
-        	<li class="email">eduardojaramardones@gmail.com</li>
+        	<li class="email">jaras@gmail.com</li>
             <li class="tel">+55(54)9932-3816</li>
             <li class="url"><a href="http://www.jpedroribeiro.com" title="J. Pedro Ribeiro Website">http://www.jpedroribeiro.com</a></li>
             <li class="adr"><span class="locality">Porto Alegre</span>, <span class="country-name">Brazil</span></li>
